#**********************************************************************************************************/
#* Makefile.am          Profil de compilation du projet Watchdog                                          */
#* Projet WatchDog version 2.0       Gestion d'habitat                      sam 05 avr 2003 19:38:16 CEST */
#* Auteur: LEFEVRE Sebastien                                                                              */
#**********************************************************************************************************/

SUBDIRS=Include IncludeClient Commun CommunClient Watchdogd Client WatchdogdAdmin 

MAINTAINERCLEANFILES = Makefile.in
