#**********************************************************************************************************/
#* Makefile.am          Profil de compilation du projet Watchdog                                          */
#* Projet Abls-Habitat version 4.3       Gestion d'habitat                           sam 05 avr 2003 19:38:16 CEST */
#* Auteur: LEFEVRE Sebastien                                                                              */
#**********************************************************************************************************/

SUBDIRS=Watchdogd
ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = autogen.sh
MAINTAINERCLEANFILES = Makefile.in
