#**********************************************************************************************************/
#* Include/Makefile.am          Profil de compilation des headers Watchdog                                */
#* Projet WatchDog version 2.0       Gestion d'habitat                      sam 05 avr 2003 21:42:30 CEST */
#* Auteur: LEFEVRE Sebastien                                                                              */
#**********************************************************************************************************/

noinst_HEADERS =  Erreur.h Reseaux.h Version.h Unite.h \
                  Reseaux_gtk_message.h Reseaux_connexion.h Reseaux_icone.h \
                  Reseaux_dls.h Reseaux_utilisateur.h Reseaux_camera.h Reseaux_synoptique.h \
                  Reseaux_message.h Reseaux_scenario.h \
                  Reseaux_mnemonique.h Reseaux_option_entreeana.h Reseaux_option_compteur_imp.h \
		  Reseaux_supervision.h Reseaux_histo.h Reseaux_atelier.h \
                  Reseaux_courbe.h Reseaux_histo_courbe.h Reseaux_fichier.h \
		  Reseaux_onduleur.h Reseaux_rs485.h Reseaux_modbus.h \
                  boule_bleue.xpm boule_verte.xpm boule_rouge.xpm boule_jaune.xpm boule_orange.xpm

pkginclude_HEADERS = Module_DLS.h

MAINTAINERCLEANFILES = Makefile.in
