#**********************************************************************************************************/
#* IncludeClient/Makefile.am          Profil de compilation des headers Client Watchdog                   */
#* Projet WatchDog version 2.0       Gestion d'habitat                     lun. 09 nov. 2009 12:04:38 CET */
#* Auteur: LEFEVRE Sebastien                                                                              */
#**********************************************************************************************************/

noinst_HEADERS =  trame.h motifs.h \
                  boule_bleue.xpm boule_verte.xpm boule_rouge.xpm boule_jaune.xpm boule_orange.xpm

MAINTAINERCLEANFILES = Makefile.in
