#**********************************************************************************************************/
#* IncludeClient/Makefile.am          Profil de compilation des headers clients Watchdog                  */
#* Projet WatchDog version 2.0       Gestion d'habitat                      sam 05 avr 2010 21:42:30 CEST */
#* Auteur: LEFEVRE Sebastien                                                                              */
#**********************************************************************************************************/

noinst_HEADERS =  trame.h motifs.h protocommunclient.h

MAINTAINERCLEANFILES = Makefile.in
